Strengthen the conditions of the destroy tasks

--- a/roles/aws-ec2-ecs/tasks/vpc.yml
+++ b/roles/aws-ec2-ecs/tasks/vpc.yml
@@ -54,12 +54,14 @@
       cidr: "{{ demo_subnet }}"
       region: "{{ demo_region }}"
       state: absent
+    when: vpc_facts.vpcs|length > 0
 
   - name: Delete the VPC Internet gateway
     ec2_vpc_igw:
       vpc_id: "{{ vpc_id }}"
       region: "{{ demo_region }}"
       state: absent
+    when: vpc_facts.vpcs|length > 0
 
   - name: Gather facts about the security groups
     ec2_group_facts:
@@ -67,6 +69,7 @@
       filters:
         vpc-id: "{{ vpc_id }}"
     register: sg_facts
+    when: vpc_facts.vpcs|length > 0
 
   - name: Delete the security groups
     ec2_group:
@@ -74,8 +77,11 @@
       region: "{{ demo_region }}"
       state: absent
     with_items: "{{ sg_facts.security_groups }}"
-    ignore_errors: yes
-    no_log: true
+    when: vpc_facts.vpcs|length > 0
+    register: delete_sg
+    failed_when:
+      - delete_sg|failed
+      - not "'cannot be deleted by a user' in delete_sg.stderr"
 
   - name: Gather facts about the route tables
     ec2_vpc_route_table_facts:
@@ -83,6 +89,7 @@
       filters:
         vpc-id: "{{ vpc_id }}"
     register: rt_facts
+    when: vpc_facts.vpcs|length > 0
 
   - name: Delete the VPC's route tables
     ec2_vpc_route_table:
@@ -92,8 +99,11 @@
       route_table_id: "{{ item.id }}"
       state: absent
     with_items: "{{ rt_facts.route_tables }}"
-    ignore_errors: yes
-    no_log: true
+    when: vpc_facts.vpcs|length > 0
+    register: delete_rt
+    failed_when:
+      - delete_rt|failed
+      - not "'has dependencies and cannot be deleted' in delete_rt.stderr"
 
   - name: Delete the VPC
     ec2_vpc_net:
