--- a/roles/aws-ec2-ecs/tasks/debug.yml
+++ b/roles/aws-ec2-ecs/tasks/debug.yml
@@ -13,6 +13,7 @@
 
   - name: Gather facts about the instance
     ec2_instance_facts:
+      region: "{{ demo_region }}"
       instance_ids:
         - "{{ item }}"
     with_items: "{{ instance_id }}"
@@ -24,7 +25,7 @@
     with_items: "{{ instance_facts.results }}"
 
   - debug:
-      msg: "http://{{ item }}:5001"
+      msg: "The public IP is: {{ item }}"
     with_items: "{{ instance_ip }}"
 
   when: action == "create"
