--- a/roles/aws-ec2-ecs/tasks/security_group.yml
+++ b/roles/aws-ec2-ecs/tasks/security_group.yml
@@ -19,8 +19,8 @@
           to_port: -1
           cidr_ip: 0.0.0.0/0
         - proto: tcp
-          from_port: 5001
-          to_port: 5001
+          from_port: "{{ demo_port }}"
+          to_port: "{{ demo_port }}"
           cidr_ip: 0.0.0.0/0
         - proto: tcp
           from_port: 80
